--- a/AppCoder/templates/appcoder/resultadoBusqueda.html
+++ b/AppCoder/templates/appcoder/resultadoBusqueda.html
@@ -12,7 +12,8 @@
     {%load static %}
 
     {%block quecambia %}
- <p>El curso buscado es : {{ camada}} </p>>
+
+ <p>El curso buscado es : {{ camada }} </p>>
 
  {% if cursos %}
  <ul>
@@ -23,5 +24,7 @@
 </ul>  
 
 {% endif%}
+
+{%endblock%}
 </body>
 </html>
