--- a/AppCoder/templates/appcoder/busqueda.html
+++ b/AppCoder/templates/appcoder/busqueda.html
@@ -11,7 +11,7 @@
     {%load static %}
 
     {%block quecambia %}
-    <form action="/AppCoder/resultadoBusqueda" method="POST">
+    <form action="/AppCoder/buscar" method="GET">
     {% csrf_token %}
 
     <h2>Ingrese un numero</h2>
