--- a/AppCoder/templates/appcoder/index.html
+++ b/AppCoder/templates/appcoder/index.html
@@ -32,9 +32,9 @@
                         <li class="nav-item"><a class="nav-link" href="{% url 'cursos' %}">Cursos</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'profesores' %}">Profesores</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'estudiantes' %}">Estudiantes</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'entregables' %}">Entregables</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'busqueda' %}">Busqueda</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#signup">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'busqueda' %}">LogIn</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#signup">About Me</a></li>
                     </ul>
                 </div>
             </div>
