--- a/AppCoder/templates/appcoder/cursos.html
+++ b/AppCoder/templates/appcoder/cursos.html
@@ -11,18 +11,14 @@
     {%load static %}
 
     {%block quecambia %}
- <form action="/AppCoder/cursos" method="POST">
-    {% csrf_token %}
+   
+    <button>
+        <a href="{% url 'CursoNew' %}"> Agregar Cursos</a>
+    </button>
 
-    <h2>Ingrese un curso</h2>
-    <p>Curso: <input type="text" name="curso"></p>
-    <p>Camada: <input type="text" name="camada"></p>
-
-    <input type="submit" value="Enviar"></p>
-
-
- </form>
-
+    <button>
+        <a href="{% url 'CursoList' %}"> Listar Cursos</a>
+    </button>
     
     {%endblock%}
 </body>
