--- a/AppCoder/templates/appcoder/index.html
+++ b/AppCoder/templates/appcoder/index.html
@@ -33,7 +33,7 @@
                         <li class="nav-item"><a class="nav-link" href="{% url 'profesores' %}">Profesores</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'estudiantes' %}">Estudiantes</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'busqueda' %}">Busqueda</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'busqueda' %}">LogIn</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'Login' %}">LogIn</a></li>
                         <li class="nav-item"><a class="nav-link" href="#signup">About Me</a></li>
                     </ul>
                 </div>
